[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/coins.gd" type="Script" id=1]
[ext_resource path="res://bunnyrunner_files/sprites/Items/bronze_1.png" type="Texture" id=2]
[ext_resource path="res://bunnyrunner_files/sprites/Particles/portal_orangeParticle.png" type="Texture" id=3]
[ext_resource path="res://bunnyrunner_files/samples/coin.wav" type="AudioStream" id=4]
[ext_resource path="res://bunnyrunner_files/sprites/Items/bronze_4.png" type="Texture" id=5]
[ext_resource path="res://bunnyrunner_files/sprites/Items/bronze_2.png" type="Texture" id=6]
[ext_resource path="res://bunnyrunner_files/sprites/Items/bronze_3.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "coins",
"speed": 6.5
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 38.833

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
spread = 180.0
flatness = 0.15
gravity = Vector3( 0, 98, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.16
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="coins" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "coins"

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="coin_bronzer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "fx"

[node name="queue_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="particles" type="Particles2D" parent="."]
emitting = false
amount = 15
one_shot = true
explosiveness = 0.84
process_material = SubResource( 9 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_coins_body_entered"]
[connection signal="timeout" from="queue_timer" to="." method="_on_queue_timer_timeout"]
